examples/v0.6/errors/for_non_iterable.nova
value: N = 10

for item in value {

}

// Expected: Value is not iterable.